backend/k8s/manifests/backend/api-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: booklib-ingress
  namespace: backend
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: booklib-service
                port:
                  number: 80
